<resources>
    <string name="app_name">Lab1</string>
    <string name="rbtn_plus">a + b = </string>
    <string name="rbtn_minus">a - b = </string>
    <string name="rbtn_multiply">a * b = </string>
    <string name="rbtn_divide">a / b = </string>
    <string name="textView_a">Enter A:</string>
    <string name="textView_b">Enter B:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="info">Name: SimpleCalculator \nAuthor: Stas Klepikov \nVersion: 3.1.1 \nGitHub: https://github.com/StasKlepikov</string>
    <string name="title_activity_history">History</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>